alt+c alignment, PO list page hover issue, Po page customer display issue, edit order date issue fixed

--- a/apps/web-giddh/src/app/purchase/purchase-order/purchase-order.component.scss
+++ b/apps/web-giddh/src/app/purchase/purchase-order/purchase-order.component.scss
@@ -86,7 +86,7 @@
                 border: 1px solid $gainsboro;
                 a {
                     width: 30px;
-                    font-size: 20px;
+                    font-size: 14px;
                     color: $gray;
                     border-right: 1px solid $gainsboro;
                     display: flex;
@@ -95,7 +95,7 @@
                     padding: 0 5px;
                     cursor: pointer;
                     align-items: stretch;
-                    height: 30px;
+                    height: 18px;
                     align-items: center;
                     background-color: $white;
                 }
